--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    
     <link rel="stylesheet" href="./style1.css">
 
     <!-- google fonts -->
@@ -152,7 +153,7 @@
     <!-- heading -->
     <div class="heading">
         <h2>Contact</h2>
-        <span>My Contacts</span>
+        <span>My</span>
   </div>
 <!-- contact container -->
   <div class="contact_container">
